Iniciando a configuração de rotas

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "liriopapel",
   "version": "1.0.0",
   "description": "Lírio de Papel - Artesanato com Scrapbook",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
