--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Lírio de Papel - Artesanato com Scrapbook",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [
     "artesanato",
@@ -21,6 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.5.9",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "morgan": "^1.9.0"
   }
 }
